--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 </head>
 <body>
   <h1>I LOVE YOU HÀ LINH 💕</h1>
-  <p>Em là cả thế giới của anh 💖</p>
-  <button onclick="showLove()">Bấm vào đây để nhận lời tỏ tình 💌</button>
+  <p>Anh nho em 💖</p>
+  <button onclick="showLove()">Nhấn vô đây đi voiu 💌</button>
 
   <audio autoplay loop>
     <source src="https://www2.cs.uic.edu/~i101/SoundFiles/StarWars60.wav" type="audio/mpeg">
@@ -88,7 +88,7 @@
 
   <script>
     function showLove() {
-      alert("Anh yêu em thật lòng, Hà Linh à 💞");
+      alert("Anh yêu em Hà Linh  💞");
     }
 
     // Tạo tim bay
